готово. Код и текст летят в diagnostics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/compile_commands.json",
     "files.associations": {
         "stdlib.h": "c",
-        "diagnostics.edl.h": "c"
+        "diagnostics.edl.h": "c",
+        "stdio.h": "c"
     }
 }
