--- a/einit/src/init.yaml.in
+++ b/einit/src/init.yaml.in
@@ -8,13 +8,28 @@ entities:
 @INIT_ControlSystem_ENTITY_CONNECTIONS@
 
 
-# The `LightsGPIO` entity can only respond to requests.
+# The `LightsGPIO` entity 
 - name: traffic_light.LightsGPIO
   connections:
   - target: traffic_light.Diagnostics
     id: diagnostics_connection
 @INIT_LightsGPIO_ENTITY_CONNECTIONS@
 
-# The `Diagnostics` entity, only dummy for now.
+# The `Diagnostics` entity
 - name: traffic_light.Diagnostics
 #@INIT_Diagnostics_ENTITY_CONNECTIONS@
+
+- name: traffic_light.Communication
+  env:
+    VFS_FILESYSTEM_BACKEND: client:@ROOTFS_ENTITY@
+    VFS_NETWORK_BACKEND: client:kl.VfsNet
+    MQTT_BROKER_ADDRESS: "@MQTT_BROKER_ADDRESS@"
+    MQTT_BROKER_PORT: "@MQTT_BROKER_PORT@"
+  connections:
+  - target: kl.VfsNet
+    id: kl.VfsNet
+  - target: @ROOTFS_ENTITY@
+    id: @ROOTFS_ENTITY@
+@INIT_Communication_ENTITY_CONNECTIONS+@
+
+@INIT_EXTERNAL_ENTITIES@
