--- a/control_system/CMakeLists.txt
+++ b/control_system/CMakeLists.txt
@@ -7,4 +7,5 @@ include (platform/nk)
 project_header_default ("STANDARD_GNU_11:YES" "STRICT_WARNINGS:NO")
 
 add_executable (ControlSystem "src/control_system.c")
+target_link_libraries(ControlSystem "-pthread")
 add_dependencies (ControlSystem traffic_light_idl_files traffic_light_control_system_edl_files)
