--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,11 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "lightsgpio.edl.h": "c",
+        "idiagnostics.idl.h": "c",
+        "icsmode.idl.h": "c",
+        "span": "cpp",
+        "controlsystem.edl.h": "c"
     }
 }
