наладил передачу  Diagnostics->Communication. Долго путался в инициализаторах, оказалось забыл вызвать обертку инициализации транспорта в Diagnostics.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "span": "cpp",
         "controlsystem.edl.h": "c",
         "idiag2comm.idl.h": "c",
-        "idiagcomm.idl.h": "c"
+        "idiagcomm.idl.h": "c",
+        "stdbool.h": "c"
     }
 }
