--- a/einit/src/init.yaml.in
+++ b/einit/src/init.yaml.in
@@ -5,6 +5,8 @@ entities:
   connections:
   - target: traffic_light.LightsGPIO
     id: lights_gpio_connection
+  - target: traffic_light.Logger
+    id: logger_connection
 @INIT_ControlSystem_ENTITY_CONNECTIONS@
 
 
@@ -36,5 +38,13 @@ entities:
   - target: traffic_light.ControlSystem
     id: control_system_connection
 @INIT_Communication_ENTITY_CONNECTIONS+@
+
+- name: traffic_light.Logger
+  env:
+    VFS_FILESYSTEM_BACKEND: "client:kl.VfsRamFs"
+  connections:
+  - target: kl.VfsRamFs
+    id: kl.VfsRamFs
+@INIT_Logger_ENTITY_CONNECTIONS+@
 
 @INIT_EXTERNAL_ENTITIES@
